--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -47,6 +47,67 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
+
+
+    <a href="https://www.youtube.com/watch?v=f2aocKWrPG8" target="_blank" title="YouTube Originals">
+      로봇이 내 일자리를 빼앗을까?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=fXCNswmAjO8" target="_blank" title="인민화보월간중국">
+      중국의 5대 AI 기업</a>
+
+      <p>
+        5. 핑안 테크놀로지(PING AN TECHNOLOGY)<br>
+        본래 중국 최대의 보험 회사.
+        최근 AI산업에 크게 투자함.
+        이미지 인식 기술을 사용 교통 사고 후의 차량 손실을 판단.
+        의약 부분을 포함해 다른 응용 분야도 연구.
+        x-레이 영상 인식을 통해 질병을 진다하거나
+        음성인식으로 고객의 기분을 판단하는 서비스와 작곡분야에도 사용된다.
+        핑안 테크놀로지의 AI음악은 스위스 폴리텍 스쿨이 주최하는
+        국제 AI음악 작곡 대회에서 1위를 차지했다.<br>
+        4. 디파이테크(DEEPHI)<br>
+        AI 하드웨어와 마이크로칩을 개발.
+        자체 개발한 SoC칩 팅타오를 출시할 예정.
+        미국의 반도체 기업 자일링스(Xilinx),
+        알리바바의 금융 계열사 앤트파이넨셜,
+        그리고 세계 최대 반도체 생산 업체인 삼성으로부터 투자를 받았다.
+        이 새로운 칩은 새로운 소프트웨어가
+        스마트폰과 컴퓨터에서 더 원활하게 작동하도록 해주고
+        우리가 미래에 AI를 더 잘 활용하도록 해줄 것입니다.<br>
+        3. 윈충커지<br>
+        광저우에 기반을 둔 윈충커지는 세관에 기술을 제공하는 것으로 시작했습니다.
+        현재 중국의 24개 지방이 윈충의 안면 인식 단말기와
+        게이트 시스템을 공공 안전솔루션으로 채택했다.
+        이러한 성공은 은행 업계에도 동일한 소프트웨어를 공급하게 해주었다.
+        최근에는 짐바브웨의 국가급 안면 인식 데이터베이스를 구축하기 위해
+        기술을 수출하는 계약을 체결했다. 중국 AI의 첫 아프리카 진출이다.
+        3D안면 인식 같은 새로운 분야의 개척은
+        AI계의 한 켠에서 계속 성장하도록 해주어야 한다.<br>
+        2. Face++<br>
+        컴퓨터 비전 경쟁에서
+        구글, 페이스북, 마이크로소프트 등 15개의 대기업을 제쳤다.
+        현재 이 기업은 200여개국에 사용자를 보유하고 있다.
+        현재 안면 인식 기술은 보안과 감시 분야에서 보편적으로 사용되고 있다.
+        Face++는 여기서 그치지 않고
+        비디오 인식, IOT, 로봇 공학에도 적용하려고 한다.
+        이 회사는 최근에 로봇 기업 아레스보츠를 인수했으며
+        아이폰 제조로 유명한 폭스콘을 위해 로봇을 개발하고 있다.<br>
+        1. 센스타임(Sensetime)<br>
+        전세계에서 가장 높게 평가받는 스타트업.
+        2018년 9월 10일
+        센스타임은 소프트뱅크 차이너벤처캐피털로부터 10억 달러의 투자를 받아
+        시장 가치를 60억 달러로 높였다.
+        중국이 아직 인재 비축에 있어 다른 선진국에 비해 뒤쳐져있긴 하지만
+        센스타임의 성공 비결은 인재에서 기인했다.
+        센스타임은 중국 최고의 AI과학자인
+        홍콩중문대학교의 탕샤오우 교수가 창립한 회사이다.
+        AI개발을 위한 중국 정부의 적극적인 정책 역시
+        이러한 성과에 일조했다.
+        이 회사의 제품은 수백개의 유명 기업들과 정부 기관에
+        보안, 금융, 스마트폰, 모바일 인터넷, 로봇, 자동차 등
+        다양한 산업에 걸쳐 서비스를 제공하고 있다.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=aSxW4iVUBEM" target="_blank" title="에스오디">
       교수들이 푸는데 6년이 걸린 초고난도 문제를 접한 인공지능의 답이 과학자들을 경악시키다</a><br>
 
