--- a/game_industry_trends.html
+++ b/game_industry_trends.html
@@ -45,6 +45,12 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+      <a href="https://www.youtube.com/watch?v=fsM6jIYh9WU" target="_blank" title="펭귄몬스터">
+        전세계를 놀라게 한 대륙의 인디 게임, 오토체스 이야기</a><br>
+
+      <a href="https://www.youtube.com/watch?v=U4XU-cjSQUg" target="_blank" title="우왕굳의게임방송">
+        실제 우주를 구현하고 로딩이 없는 미친게임이 있다?(스타시티즌)</a><br>
+
       <a href="https://www.youtube.com/watch?v=NgWdv081oqQ" target="_blank" title="레드셀">
         전직 특수부대원이 하는 FPS 게임 '콜오브듀티 모던워페어'</a><br>
 
