--- a/inside_out.html
+++ b/inside_out.html
@@ -88,7 +88,7 @@
 
       [January 14th, 2020]
         <p>
-        - 내가 지금 강하고 경고하다고 느낀다면
+          내가 지금 강하고 경고하다고 느낀다면
           그것은 내가 그래서가 아니라
           하나님이 나의 산성으로 계시고
           내가 그것을 의지하고 있는 까닭이다
