--- a/karazhan_library.html
+++ b/karazhan_library.html
@@ -68,7 +68,8 @@
       [그래서 철학이 필요해]-고바야시 쇼테이
     <h3><strong>심리학</h3></strong>
       [나도 아직 나를 모른다]-허지원<br>
-      [죽기 전에 한 번은 심리학을 만나라]-서상원
+      [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
+      [삶이 괴롭냐고 심리학이 물었다]-게일 브레너
     <h3><strong>처세술</h3></strong>
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅
@@ -91,7 +92,7 @@
         <li>경제: [앞으로 10년 경제 대위기가 온다]-정동희</li>
         <li>역사: [알렉산드로스 제국의 눈물]-제임스 롬</li>
         <li>철학: [그래서 철학이 필요해]-고바야시 쇼테이</li>
-        <li>심리학/처세술:</li>
+        <li>심리학/처세술:[삶이 괴롭냐고 심리학이 물었다]-게일 브레너</li>
         <li>과학: [기억은 미래로 향한다]</li>
         <br>
         <li>경제: [부의 본능]-브라운스톤</li>
