--- a/science_and_technology.html
+++ b/science_and_technology.html
@@ -45,6 +45,13 @@
   <h1>Science & Technology</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=MqNlqv1yPqk" target="_blank" title="안된과학">
+      양자컴퓨터 한방정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=dWWmGumJTkY" target="_blank" title="에스오디">
+      당신이 알고 있던 우주는 틀렸다! 노벨상까지 받은 암흑에너지가 거짓이다!?</a><br>
+
     <a href="https://www.youtube.com/watch?v=x4Btgurexb4" target="_blank" title="1분과학">
       우주가 여러 개다?!(다중우주)</a><br>
 
