--- a/stock_investment.html
+++ b/stock_investment.html
@@ -46,6 +46,57 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=BbL5sO65IMg" target="_blank" title="시간여행TV">
+      롯데리츠 상장, 엥 이거 완전 개념 리츠 아니냐?</a>
+
+      <p>
+        제가 자주 보는 슈카월드님도 대기업 역사에 대해서
+        10년치 썰을 푸셔서 너무 재밌게 보고 있는데
+        그런거 알고 있으면 좋기는 한데
+        사실 주식은 결국 수익을 내기 위해서 하는 거잖아요.
+        그러면 그냥 수익을 내기 위해서 최소한의 정보만 알고 있으면 돼요.
+        막 그거를 책을 사서 공부를 하려고 하지 말고요.
+        제가 여러분들이 모르는 정보를 가지고 매매를 해서 주식으로 돈을 버는게 아니라
+        그냥 다 아는 정보를 바탕으로 매매를 해서 결과가 달라지는 거잖아요.
+        매매가 중요한거지 정보가 중요한 건 아니에요.
+        그래서 여러분들 중에 주식 공부에 대해서 강박증을 받으신 분들이 많은 것 같은데
+        주식은 공부는 안하셔도 되고요.
+        결과만 좋으면 된는데 결과가 좋기 위해서는 많이 해봐야 돼요.
+        주식은 공부를 해서 잘하는 게 아니라 매매를 많이 해본 사람이 잘해요.
+        매매를 많이 해봐서 깡통도 차보고, 신용매수 써서 돈도 다 잃어보고.
+        돈을 다 잃어서 빚이 생길 정도로 복구가 안될 정도로 잃으시면 안되죠.
+        큰 자산의 8-90%를 잃었다고 하더라도 소액이었다면 결국 돈을 다시 벌어서
+        주식시장을 다시 도전해볼 수 있는거잖아요.
+        그래서 저도 주식은 어린 나이에 시작할수록 좋다고 생각해요. 특히 미성년자일 때.
+        미성년자에게 50-100만원은 큰 돈이지만
+        막상 성인 되면 그렇게 큰 돈도 아니잖아요.
+      </p>
+
+    <a href="https://www.youtube.com/watch?v=BOaywbdl5UQ" target="_blank" title="시간여행TV">
+      팟스넷 주식을 사고싶지 않은 이유</a>
+
+      <p>
+        블록체인 기술이 기존에 있던 기술에 붙으면
+        무조건 더 좋아지는 그런게 아니더라고요.
+        기존 기술에 블록체인이라는 단어만 붙이면
+        다 말은 되거든요.
+        근데 블록체인이 현재 우리한테 보여주고 있는게 딱히 없잖아요.
+        그리고 블록체인 기술을 접목한다고 다 좋아지는 게 아니고
+        의미가 없는 경우도 많아요.
+        저는 쉬메신저가 성공하기 정말 어렵다고 생각해요.
+        사실 한국 사람들 라인도 잘 안써요.
+        카카오톡 하나 밖에 안쓰거든요.
+        근데 팍스넷이라는 중소기업에서 만든 쉬메신저를
+        누가 이제 블록체인 기술이니까 나는 이거 써야지 하면서 쓰겠어요?
+        블록체인에 대해서 한 가지 얘기를 하자면
+        코스닥회사랑 블록체인 회사랑 엮이면 다 끝이 안좋았어요.
+        두올산업에서도 블록체인 회사인 빗썸거래소를 이수한다고 해서
+        가즈아 하면서 올라왔죠? 근데 그 끝은 딱 세 토막이 났습니다.
+
+
+
+
+
     <a href="https://www.youtube.com/watch?v=pfkQePEfciw" target="_blank" title="시간여행TV">
       정치테마주에 대한 주관적인 의견</a>
 
