--- a/index.html
+++ b/index.html
@@ -64,21 +64,26 @@
 <div id="grid">
   <ul class="table">
     <font size="7">Inventory</font>
-    <li><a href="show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li><a href="karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="inside_out.html" class="inactive">Inside Out</a></li>
+    <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="Inside_out.html" class="inactive">Inside Out</a></li>
     <br>
     <font size="7">Status</font>
-    <li><a href="game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="Game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-    <li><a href="science_and_technology.html" class="inactive">Science & Technology</a></li>
-    <li><a href="the_economist.html" class="inactive">The Economist</a></li>
+    <li><a href="Science_and_technology.html" class="inactive">Science & Technology</a></li>
+    <li><a href="The_economist.html" class="inactive">The Economist</a></li>
     <br>
     <font size="7">Skills</font>
-    <li><a href="the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li><a href="stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li><font size="3"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
+
+
+
 
   <!--
   <ol>
