--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -25,20 +25,22 @@
 
   <ul class="table">
     <font size="7">Inventory</font>
-    <li><a href="show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li><a href="karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="inside_out.html" class="inactive">Inside Out</a></li>
+    <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="Inside_out.html" class="inactive">Inside Out</a></li>
     <br>
     <font size="7">Status</font>
-    <li><a href="game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="Game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="AI_industry_trends.html" class="active">AI Industry Trends</a></li>
-    <li><a href="science_and_technology.html" class="inactive">Science & Technology</a></li>
-    <li><a href="the_economist.html" class="inactive">The Economist</a></li>
+    <li><a href="Science_and_technology.html" class="inactive">Science & Technology</a></li>
+    <li><a href="The_economist.html" class="inactive">The Economist</a></li>
     <br>
     <font size="7">Skills</font>
-    <li><a href="the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li><a href="stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li><font size="3"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
 
   <div id="contents">
@@ -47,7 +49,8 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
-
+    <a href="https://www.youtube.com/watch?v=BKj3fnPSUIQ" target="_blank" title="세바시 강연">
+      모두를 위한 인공지능-제프 딘 구글 AI 총괄 시니어 펠로우</a><br>
 
     <a href="https://www.youtube.com/watch?v=f2aocKWrPG8" target="_blank" title="YouTube Originals">
       로봇이 내 일자리를 빼앗을까?</a><br>
@@ -145,20 +148,22 @@
 
       <ul class="table">
         <font size="7">Inventory</font>
-        <li><a href="show_yourself.html" class="inactive">Show Yourself</a></li>
-        <li><a href="karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li><a href="inside_out.html" class="inactive">Inside Out</a></li>
+        <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+        <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+        <li><a href="Inside_out.html" class="inactive">Inside Out</a></li>
         <br>
         <font size="7">Status</font>
-        <li><a href="game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+        <li><a href="Game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
         <li><a href="AI_industry_trends.html" class="active">AI Industry Trends</a></li>
-        <li><a href="science_and_technology.html" class="inactive">Science & Technology</a></li>
-        <li><a href="the_economist.html" class="inactive">The Economist</a></li>
+        <li><a href="Science_and_technology.html" class="inactive">Science & Technology</a></li>
+        <li><a href="The_economist.html" class="inactive">The Economist</a></li>
         <br>
         <font size="7">Skills</font>
-        <li><a href="the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-        <li><a href="stock_investment.html" class="inactive">Stock Investment</a></li>
-        <li><a href="strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+        <li><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+        <li><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+        <li><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+        <li><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+        <li><font size="3"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
       </ul>
 
   </div>
