--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -17,11 +17,14 @@
 </head>
 
 <body>
-  <h1><a href="index.html" class="inactive">GRUZAM ENTERTAINMENT</a></h1>
-  <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
+  <div style="background-color:#B71C1C">
+    <h1><a href="index.html" class="inactive">
+      GRUZAM ENTERTAINMENT</a></h1>
+    <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
+  </div>
 
 <div id="grid">
-  <ul class="table">
+  <ul style="background-color:#21618C" class="table">
     <font size="7">Inventory</font>
     <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
