--- a/Inside_out.html
+++ b/Inside_out.html
@@ -123,7 +123,7 @@
 
 
 
-        <ul class="table">
+        <ul style="background-color:#21618C" class="table">
           <font size="7">Inventory</font>
           <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
           <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
