--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -904,10 +904,10 @@
         </p>
 
      <a href="https://www.youtube.com/watch?v=AOPue13SZe8" target="_blank" title="루틴">
-          성공하는 사람에겐 그만의 '루틴(routine)'이 있다!</a>
+          성공하는 사람에겐 그만의 '루틴(routine)'이 있다!</a><br><br><br>
 
 
-      <ul class="table">
+      <ul style="background-color:#21618C" class="table">
         <font size="7">Inventory</font>
         <li><a href="Show_yourself.html" class="active">Show Yourself</a></li>
         <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
