--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -1341,7 +1341,7 @@
       <br><br>
 
       <div id="grid">
-        <ul class="table">
+        <ul style="background-color:#21618C" class="table">
           <font size="7">Inventory</font>
           <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
           <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
