--- a/The_economist.html
+++ b/The_economist.html
@@ -117,7 +117,7 @@
 
   <br>
 
-  <ul class="table">
+  <ul style="background-color:#21618C" class="table">
     <font size="7">Inventory</font>
     <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
     <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
