--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -392,7 +392,7 @@
   <br><br><br>
 
   <div id="grid">
-    <ul class="table">
+    <ul style="background-color:#21618C" class="table">
       <font size="7">Inventory</font>
       <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
       <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
