--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -51,6 +51,9 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=GQussEDXr0E" target="_blank" title="이슈텔러">
+      인공지능은 정말 인류를 멸종시키려는 걸까? AI가 인류를 공격하는 방법과 이유</a><br>
+
     <a href="https://www.youtube.com/watch?v=BKj3fnPSUIQ" target="_blank" title="세바시 강연">
       모두를 위한 인공지능-제프 딘 구글 AI 총괄 시니어 펠로우</a><br>
 
