--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -50,6 +50,9 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+      <a href="https://www.youtube.com/watch?v=6IPMrg6DMuI" target="_blank" title="디스이즈게임">
+        우리가 심해에 머무는 것은 실력 때문만이 아니다</a><br>
+
       <a href="https://www.youtube.com/watch?v=cU6lAW4aQlA" target="_blank" title="지조조세">
         뭔 게임이길래 첫 달만에 1000억을 범?[명일방주]</a><br>
 
