--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -82,7 +82,8 @@
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
       [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
     <h3><strong>경영</h3></strong>
-      [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단
+      [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단<br>
+      [채리티:워터]-스캇 해리슨
     <h3><strong>소설</h3></strong>
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
@@ -91,6 +92,15 @@
       [기획자의 습관]-최장순
     </p></pre>
 
+
+    <p><pre>
+      <h2>2020년 2월 독서</h2>
+        <li>경제/경영: [채리티:워터]-스캇 해리슨</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:</li>
+        <li>과학:</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 1월 독서</h2>
