--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -51,6 +51,18 @@
 
 
 
+    [Fabuarary 1st, 2020]
+
+    <p>
+      <b>Embezzle</b>: to appropriate fraudulently to one's own use<br>
+      <b>Refurbish</b>: to brighten or freshen up<br>
+      <b>Interim</b>: (n)an intervening time
+      / (adj)lying, occuring, or functioning within the limiting boundaries
+      / belonging to mental or spiritual life
+      / belonging to the inner constitution or concealed nature of something
+      / lying awy or remote from the border or shore
+    </p>
+
     [January 31th, 2020]
 
     <p>
