--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -50,6 +50,36 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=WCwPvwOjSc4" target="_blank" title="시간여행TV">
+      10개월동안 86.46% 계좌 수익률, 비결을 공개합니다</a>
+
+      <p>
+        추세매매의 가장 큰 단점은 리턴도 큰데 리스크도 크다는 점이에요.
+        그리고 계좌회전률이 빠르다보니까
+        돈을 두 번만 연속으로 잃어도 계좌가 반토막 넘게 나요.
+        그러면 이제 자기 실력대로 매매를 잘 못하거든요.
+        그래서 저는 추세매매법을 잘 안좋아해요.
+
+        추세매매를 할 때는 항상 주식시장을 보고 있어야 했어요.
+        근데 역추세매매를 하면 주식을 안보고 있어도 되어서 좋아요.
+        추세매매를 하면 그날 주가가 오르고 내리는 걸 따라갈 확률이 높고
+        장중에도 변동이 커서, 그날의 저점과 고점의 갭이 클 때가 많아요.
+        그런데 역추세매매는 그런거 없이 잔잔하게 흘러가요.
+        떨어지더라도 버틸만하게 -5~10% 찍히는건 상관 안하고요.
+
+        추세매매를 하면 손절할 일도 많고
+        계좌회전률이 빠르니까 그날그날 컨디션이나 운에 따라서 매매가 달라지죠.
+        반면에 역추세매매는 그런거 없고 시간만 기다릴줄 알 크게 손실 볼 일이 거의 없어요.
+
+        저는 어느게 좋다 나쁘다를 떠나서 그냥 역추세매매가 잘 맞아요.
+        신저가를 찍은 종목 중에서 진짜 이만하면 더 떨어지는게 문제가 있다,
+        진짜 때려죽여도 여기보다 더 떨어지지 않을 것 같다 싶은 종목을 사면
+        왠만하면 손해를 안봐요.
+        손해를 보더라도 별로 손해가 크지 않을 때가 많고 손해본 게 복구가 되기도 해요.
+        근데 추세매매 같은 경우는 한 번 고점을 물면 진짜 인생에 답이 없어지는거에요.
+      </p>
+
+
     <a href="https://www.youtube.com/watch?v=jlQe0kH0UdM" target="_blank" title="시간여행TV">
       주식강의, 리딩 듣지마세요 / 주식공부 하는 법</a>
 
