--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -51,6 +51,15 @@
 
 
 
+    [Fabuarary 1st, 2020]
+
+    <p>
+      的/很/好/坏/大/小/贵/便宜/难/容易/汉语<br>
+      他的桌子很大/他的桌子大妈/他的桌子不大/他的桌子不大吗<br>
+      他的书很好/他的书号码/他的书不好/他的书不好吗/他很大/他大我小<br>
+      他的书很多/他的书不少/我的书好/他的书坏/老师的词典很贵/汉语不难/汉语很容易
+    </p>
+
     [January 31th, 2020]
 
     <p>
