--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -19,31 +19,31 @@
 <body>
   <div style="background-color:#B71C1C">
     <h1><a href="index.html" class="inactive">
-      GRUZAM ENTERTAINMENT</a></h1>
-    <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
+      G<span style="color:#212F3D">RUZ</span>AM E<span style="color:#212F3D">NTERTAINMENT</span>
+    </a></h1>
+    <h2 style="color:#2E4053;text-align:center" id="subtitle">Let Your Soul Resonate with Cosmetic Joyfulness</h2>
   </div>
 
 <div id="grid">
   <ul style="background-color:#21618C" class="table">
-    <font size="7">Inventory</font>
-    <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
     <br>
-    <font size="7">Status</font>
-    <li><a href="Game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-    <li><a href="Science_and_technology.html" class="active">Science & Technology</a></li>
-    <li><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="active">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
     <br>
-    <font size="7">Skills</font>
-    <li><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li><font size="3"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
-
   <div id="contents">
   <img src="battlecruiser.jpg" width="100%">
 
@@ -72,23 +72,23 @@
   <br>
 
   <ul style="background-color:#21618C" class="table">
-    <font size="7">Inventory</font>
-    <li><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="Inside_out.html" class="inactive">Inside Out</a></li>
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Inside_out.html" class="inactive">Inside Out</a></li>
     <br>
-    <font size="7">Status</font>
-    <li><a href="Game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-    <li><a href="Science_and_technology.html" class="active">Science & Technology</a></li>
-    <li><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="active">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
     <br>
-    <font size="7">Skills</font>
-    <li><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li><font size="3"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
 
   </div>
