--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1><a href="index.html" class="inactive">
       G<span style="color:#212F3D">RUZ</span>AM E<span style="color:#212F3D">NTERTAINMENT</span>
     </a></h1>
-    <h2 style="color:#2E4053;text-align:center" id="subtitle">Let Your Soul Resonate with Cosmetic Joyfulness</h2>
+    <h2 style="color:#2E4053;text-align:center" id="subtitle">Let Your Soul Resonate with Cosmic Joyfulness</h2>
   </div>
 
   <div class="row">
