--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -21,7 +21,7 @@
     <h1><a href="index.html" class="inactive">
       G<span style="color:#212F3D">RUZ</span>AM E<span style="color:#212F3D">NTERTAINMENT</span>
     </a></h1>
-    <h2 style="color:#2E4053;text-align:center" id="subtitle">Let Your Soul Resonate with Cosmetic Joyfulness</h2>
+    <h2 style="color:#2E4053;text-align:center" id="subtitle">Let Your Soul Resonate with Cosmic Joyfulness</h2>
   </div>
 
 <div id="grid" >
@@ -49,6 +49,9 @@
 
     <h1>Game Industry Trends</h1><br><br><br>
 
+
+      <a href="https://www.youtube.com/watch?v=EjFDqXJOtY8" target="_blank" title="집마홀릭TV">
+        집마가 주목한 2020년 최고의 게임 기대작(PS4/XB1/NS/스팀)</a><br>
 
       <a href="https://www.youtube.com/watch?v=6IPMrg6DMuI" target="_blank" title="디스이즈게임">
         우리가 심해에 머무는 것은 실력 때문만이 아니다</a><br>
