--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -50,6 +50,59 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=ZUtLvmMGlFg" target="_blank" title="시간여행TV">
+      특정 종목에 세력이 있는지 없는지 판단하는 방법</a>
+
+      <p>
+        한 종목에 1억 이상 넣으실 생각이 없으신 분들은
+        세력이 있는 종목을 하는 게 좋고
+        그 이상으로 넣으실 분들은 세력이 없는 종목에서 조용히 기다리시는 게 낫긴 해요.
+        세력이 없으면 없는대로, 있으면 있는대로 장점이 있어요.
+        있는 종목의 장점은 호재가 발생했을 때 즉각 반응을 한다는 것이고요.
+        없는 종목의 장점은 호재가 있을 때 즉각 반응을 하지는 않지만
+        1등 주가 치고 나갔을 때 2등주, 3등주로 따라갈 수가 있어요.
+        한 번 따라가면 1등 주에서 매수세가 넘어오기도 하고요.
+        그래서 좋은 점은 세력 같은 경우 매집한 주식을 이제 고점에서 팔아 먹잖아요.
+        세력이 없는 종목은 큰 매물이 나올 일이 없기 때문에
+        오히려 1등주보다 더 크게 가는 경우가 있어서
+        최근에 저는 세력이 없는 종목을 찾아서 매매를 하고 있어요.
+        개인 차이인 것 같아요.
+        정치테마주 같은 경우는 확실히 대장주 매매를 하는 게 좋고,
+        그 외의 테마주 같은 경운은 2등주, 3등주를 매매하는 경우도 있습니다.
+        보통 큰 돈을 넣어야 할 때는 세력이 없는 줒를 매매하고
+        정치테마주처럼 일정이 딱딱 정해져 있는 그런 테마들을 매매할 때는
+        세력 형님이 작업하신거에 따라가는 경우가 많아요.
+        지진, 조류독감, 돼지열병처럼 언제 올지 모르는 그런 테마주의 경우는
+        세력 없는 종목으로 매매하는게 괜찮을 때가 많아요.
+
+        사실 차트나 호가만 보고 세력이 있다 없다 구분하기가 어려운데
+        제가 쓰는 가장 간단한 방법만 알려드릴게요.
+        호재가 있을 때 거래량이 거의 없으면 세력이 없을 가능성이 커요.
+        거래량이 없다는 것의 기준은 최근 20일 거래 평균의 5배도 안된다면
+        거래량이 없는거에요.
+        호재 발생시 거래량이 없고 상승도 안터진다면 세력이 없는거에요.
+        테마주로 묶인 종목의 경우, 다른 테마주들의 거래량이 터지면서 상승이 나올 때
+        어느 날부터 해당 종목만 같이 못간다 싶으면 그 종목에는 세력이 없다고 보시면 되요.
+
+        코스닥 종목은 왠만하면 10~20억만 있으면 상한가를 만들 수가 있어요.
+        한 +15% 까지만 만들어도 상한가를 만들 수 있거든요.
+        문제가 뭐냐면 상한가를 만들어도 팔아먹지를 못하는거에요.
+        그래서 명확한 재료가 필요합니다.
+        확실한 재료가 있고, 그 재료로 기사까지 나와야 해요.
+
+        그리고 3년 이내 신규 상장 종목들은 세력이 잘 없어요.
+
+        저평가주 찾으라고 하면 그냥 신규상장 종목에서 찾으세요.
+        자산이 빵빵하고 실적도 빵빵한데 사람들이 몰라서 안사다보니
+        저평가를 받은거겠죠.
+        그런 조건은 신규 상장주 밖에 없어요.
+        그런데 상장한지 3개월이 지나기까지는 사면 안되요.
+        왜냐면 공모가 대비해서 시초가가 뻥튀기 되는 경우가 많아서 그래요.
+        신규 상장하고 3~6개월은 계속 떨어질 수 밖에 없고
+        이제 안떨어지겠다 싶은 시점부터 보통 3년까지는 저평가가 유지돼요.
+        3년이 지나면 이제 제대로 된 가치를 인정받는 경우가 많아요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=WCwPvwOjSc4" target="_blank" title="시간여행TV">
       10개월동안 86.46% 계좌 수익률, 비결을 공개합니다</a>
 
