--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -50,6 +50,9 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=u9smxt4wUXM" target="_blank" title="와빌">
+      인공지능이 인간을 초월할 때, 무슨 문제가 생길까?</a><br>
+
     <a href="https://www.youtube.com/watch?v=GQussEDXr0E" target="_blank" title="이슈텔러">
       인공지능은 정말 인류를 멸종시키려는 걸까? AI가 인류를 공격하는 방법과 이유</a><br>
 
