--- a/Inside_out.html
+++ b/Inside_out.html
@@ -50,6 +50,20 @@
     <h1>Inside Out</h1><br><br><br>
 
 
+      [Fabruary 3rd, 2020]
+        <p>
+          분별하려 애쓴다고 꼭 분별이 되는게 아니며,
+          분별에 무관심할 때라도 꼭 분별이 안되는 건 아니다.
+
+          모든 것이 다 달라보여도 하나의 진리는 존재한다.
+          그러나 양립할 수 없으며 공존하는 진실과 거짓은 하나가 될 수 없다.
+        </p>
+
+        <p>
+          천사의 탈을 쓴 악마가 존재한다는 것이
+          내가 악마의 탈을 써야할 이유가 되지는 않는다.
+        </p>
+                    
       [January 28th, 2020]
 
         <p>
