--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -50,6 +50,9 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=B2U8ZIopCnI" target="_blank" title="체인지그라운드">
+      인공지능이 인류를 위협할 3가지 이유</a><br>
+
     <a href="https://www.youtube.com/watch?v=u9smxt4wUXM" target="_blank" title="와빌">
       인공지능이 인간을 초월할 때, 무슨 문제가 생길까?</a><br>
 
