--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -50,6 +50,10 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+
+      <a href="https://www.youtube.com/watch?v=cUJdG63eYdg" target="_blank" title="디스이즈게임">
+        전염병으로 멸망한 세상, 진짜 악마는 바이러스가 아니다</a><br>
+
       <a href="https://www.youtube.com/watch?v=EjFDqXJOtY8" target="_blank" title="집마홀릭TV">
         집마가 주목한 2020년 최고의 게임 기대작(PS4/XB1/NS/스팀)</a><br>
 
