--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -50,6 +50,41 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=zLPW36pmpjQ" target="_blank" title="시간여행TV">
+      헬릭스미스 22억 5천만원 수익 인증 + 투자아이디어</a>
+
+      <p>
+        주식시장에서 수익을 내는 가장 확실한 방법은
+        잘 사서 잘 파는 것인데
+        사실 모든 종목을 잘 사서 잘 팔 수는 없어요.
+        차선으로 잘 사거나 잘 팔거나 둘 중에 하나만 해도 수익은 나거든요.
+        제 경우 헬릭스미스를 잘 사지는 않았는데 잘 팔았어요.
+
+        잘 사지 못했다고 했던게, 구매 이후에 하한가가 안풀린게 가장 컸어요.
+
+        하한가를 가는 이유가,
+        기업의 가치가 훼손돼서 하한가를 가는 경우가 있고,
+        기업의 가치가 훼손되지 않았는데
+        1) 심리적인 요인이나
+        2) 수급적인 요인이나
+        3) 시간에 대한 할인율(기다리기 싫어서)이 적용돼서 하한가를 가는 경우가 있어요.
+
+        후자의 경우 기다리면 주가가 반드시 다시 올라와요.
+        그게 언제인지 몰라서 사람들이 싫어하는거지
+        일단 바닥을 한 번 확인을 하면 그런 종목들이 가장 안전하다고 볼 수 있어요.
+        저도 그런 종목들을 가장 선호하고요.
+
+        보통 하한가를 가능 경우는 사실
+        한 10~15% 떨어지면 될 것을
+        공매도 치는 분들이 한 10% 정도 떨어지면 겁을 줘요.
+        매도 물량을 엄청 때려박으면서 하한가까지 밀어버릴 때가 많거든요.
+        그런 경우는 사실 다시 올라오는 경우가 많아요.
+        그래서 하한가 가는 종목에 대해서 편견을 가지거나 겁을 먹을 필요는 없어요.
+        그 종목들도 잘 매매를 하면 여러분들께 수익을 줄 수 있는 종목이에요.
+
+        단, 하한가를 간 종목을 바로 다음날 사는거는 무조건 피하셔야 합니다.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=ZUtLvmMGlFg" target="_blank" title="시간여행TV">
       특정 종목에 세력이 있는지 없는지 판단하는 방법</a>
 
